# wrappers

./: .dockerignore  .gitignore  .history  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  PR_REVIEWS.md  README.md  SECURITY.md  index.html  mkdocs.yaml  sitemap.xml  tags.json
docs/: CNAME  (+22 more)
supabase-wrappers/: Cargo.toml  README.md
supabase-wrappers-macros/: Cargo.toml  README.md
supabase-wrappers-macros/src/: instance.rs  lib.rs  limit.rs  meta.rs  modify.rs  polyfill.rs  qual.rs  scan.rs  sort.rs  utils.rs
supabase-wrappers-macros/src/parser/: fdw_type.rs  mod.rs
supabase-wrappers/src/: import_foreign_schema.rs  instance.rs  interface.rs  lib.rs  limit.rs  memctx.rs  modify.rs  options.rs  polyfill.rs  qual.rs  scan.rs  sort.rs  upper.rs  utils.rs
wasm-wrappers/fdw/: .gitignore  Cargo.toml
wasm-wrappers/fdw/cal_fdw/: Cargo.toml
wasm-wrappers/fdw/cal_fdw/src/: lib.rs
wasm-wrappers/fdw/cal_fdw/wit/: world.wit
wasm-wrappers/fdw/calendly_fdw/: Cargo.toml
wasm-wrappers/fdw/calendly_fdw/src/: lib.rs
wasm-wrappers/fdw/calendly_fdw/wit/: world.wit
wasm-wrappers/fdw/cfd1_fdw/: Cargo.toml
wasm-wrappers/fdw/cfd1_fdw/src/: lib.rs
wasm-wrappers/fdw/cfd1_fdw/wit/: world.wit
wasm-wrappers/fdw/clerk_fdw/: Cargo.toml
wasm-wrappers/fdw/clerk_fdw/src/: lib.rs
wasm-wrappers/fdw/clerk_fdw/wit/: world.wit
wasm-wrappers/fdw/gravatar_fdw/: Cargo.toml
wasm-wrappers/fdw/gravatar_fdw/src/: lib.rs
wasm-wrappers/fdw/gravatar_fdw/wit/: world.wit
wasm-wrappers/fdw/helloworld_fdw/: Cargo.toml
wasm-wrappers/fdw/helloworld_fdw/src/: bindings.rs  lib.rs
wasm-wrappers/fdw/helloworld_fdw/wit/: world.wit
wasm-wrappers/fdw/hubspot_fdw/: Cargo.toml
wasm-wrappers/fdw/hubspot_fdw/src/: lib.rs
wasm-wrappers/fdw/hubspot_fdw/wit/: world.wit
wasm-wrappers/fdw/infura_fdw/: Cargo.toml  README.md
wasm-wrappers/fdw/infura_fdw/src/: lib.rs
wasm-wrappers/fdw/infura_fdw/tests/: lib.rs
wasm-wrappers/fdw/infura_fdw/wit/: world.wit
wasm-wrappers/fdw/notion_fdw/: Cargo.toml
wasm-wrappers/fdw/notion_fdw/src/: lib.rs
wasm-wrappers/fdw/notion_fdw/wit/: world.wit
wasm-wrappers/fdw/openapi_fdw/: .gitignore  Cargo.toml  Makefile  PERFORMANCE.md  README.md
wasm-wrappers/fdw/openapi_fdw/benches/: fdw_benchmarks.rs
wasm-wrappers/fdw/openapi_fdw/examples/: README.md
wasm-wrappers/fdw/openapi_fdw/src/: column_matching.rs  column_matching_tests.rs  config.rs  config_tests.rs  lib.rs  lib_tests.rs  pagination.rs  pagination_tests.rs  request.rs  request_tests.rs  response.rs  response_tests.rs  schema.rs  schema_tests.rs  spec.rs  spec_tests.rs
wasm-wrappers/fdw/openapi_fdw/test/: .env.example  benchmark.sh  docker-compose.yml  expectations.json  init.sql  mock-spec.json  run-examples.sh  run.sh
wasm-wrappers/fdw/openapi_fdw/wit/: world.wit
wasm-wrappers/fdw/orb_fdw/: Cargo.toml
wasm-wrappers/fdw/orb_fdw/src/: lib.rs
wasm-wrappers/fdw/orb_fdw/wit/: world.wit
wasm-wrappers/fdw/paddle_fdw/: Cargo.toml
wasm-wrappers/fdw/paddle_fdw/src/: bindings.rs  lib.rs
wasm-wrappers/fdw/paddle_fdw/wit/: world.wit
wasm-wrappers/fdw/shopify_fdw/: CLAUDE.md  Cargo.toml  README.md
wasm-wrappers/fdw/shopify_fdw/src/: api.rs  field_maps.rs  lib.rs  models.rs  tests.rs
wasm-wrappers/fdw/shopify_fdw/wit/: world.wit
wasm-wrappers/fdw/slack_fdw/: Cargo.toml  README.md
wasm-wrappers/fdw/slack_fdw/.cargo/: config.toml
wasm-wrappers/fdw/slack_fdw/src/: api.rs  lib.rs  models.rs
wasm-wrappers/fdw/slack_fdw/wit/: world.wit
wasm-wrappers/fdw/snowflake_fdw/: Cargo.toml
wasm-wrappers/fdw/snowflake_fdw/src/: bindings.rs  lib.rs
wasm-wrappers/fdw/snowflake_fdw/wit/: world.wit
wrappers/: Cargo.toml  README.md  build.rs  wrappers.control
wrappers/.ci/: docker-compose-native.yaml  docker-compose-wasm.yaml  docker-compose.yaml  docker-compose.yml
wrappers/.ci/shopify-mock/: Dockerfile  server.ts
wrappers/.ci/shopify-mock/fixtures/: app.json  businessEntities.json  collections.json  customers.json  draftOrders.json  fulfillmentOrders.json  locations.json  orders.json  productVariants.json  products.json  shop.json
wrappers/dockerfiles/airtable/: Dockerfile  server.py
wrappers/dockerfiles/auth0/: Dockerfile  server.py
wrappers/dockerfiles/bigquery/: Dockerfile  data.yaml  dummy_auth.json
wrappers/dockerfiles/clickhouse/: setup.sql
wrappers/dockerfiles/cognito/: Dockerfile  docker-compose.yml  server.py
wrappers/dockerfiles/dynamodb/: init.sh
wrappers/dockerfiles/firebase/: README.md  firebase.json
wrappers/dockerfiles/firebase/baseline-data/: firebase-export-metadata.json
wrappers/dockerfiles/iceberg/: server.py
wrappers/dockerfiles/logflare/: Dockerfile  data.json  server.py
wrappers/dockerfiles/notion/: Dockerfile  data.json  server.py
wrappers/dockerfiles/pg/: Dockerfile  lib.rs
wrappers/dockerfiles/s3/: Dockerfile  iceberg_seed.py
wrappers/dockerfiles/s3/init/: 01-init-data.sh
wrappers/dockerfiles/s3/test_data/: test_data.csv  test_data.jsonl  test_data.jsonl.bz2  test_data.tsv
wrappers/dockerfiles/s3vectors/: server.py
wrappers/dockerfiles/wasm/: Dockerfile  server.py
wrappers/sql/: bootstrap.sql  finalize.sql
wrappers/src/: lib.rs  stats.rs
wrappers/src/fdw/: mod.rs
wrappers/src/fdw/airtable_fdw/: README.md  airtable_fdw.rs  mod.rs  result.rs  tests.rs
wrappers/src/fdw/auth0_fdw/: README.md  auth0_fdw.rs  mod.rs  result.rs  tests.rs
wrappers/src/fdw/bigquery_fdw/: README.md  bigquery_fdw.rs  mod.rs  tests.rs
wrappers/src/fdw/clickhouse_fdw/: README.md  clickhouse_fdw.rs  mod.rs  tests.rs
wrappers/src/fdw/cnosdb_fdw/: README.md  cnosdb_fdw.rs  mod.rs  test.rs
wrappers/src/fdw/cognito_fdw/: README.md  cognito_fdw.rs  mod.rs  tests.rs
wrappers/src/fdw/duckdb_fdw/: README.md  duckdb_fdw.rs  mapper.rs  mod.rs  server_type.rs  tests.rs
wrappers/src/fdw/dynamodb_fdw/: README.md  conv.rs  dynamodb_fdw.rs  mod.rs  tests.rs
wrappers/test/: fixtures.sql
wrappers/test/expected/: bigquery.out  clickhouse.out  firebase.out  stripe.out
wrappers/test/sql/: bigquery.sql  clickhouse.sql  firebase.sql  stripe.sql
(+301 files in other folders)
