[workspace]
members = [
    "supabase-wrappers",
    "supabase-wrappers-macros",
    "wrappers",
]
exclude = [
    "wasm-wrappers/fdw/helloworld_fdw",
    "wasm-wrappers/fdw/snowflake_fdw",
    "wasm-wrappers/fdw/paddle_fdw",
]
resolver = "2"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

