[workspace]
members = [
    "supabase-wrappers",
    "supabase-wrappers-macros",
    "wrappers",
]
exclude = [
    "wasm-wrappers/fdw/cal_fdw",
    "wasm-wrappers/fdw/calendly_fdw",
    "wasm-wrappers/fdw/cfd1_fdw",
    "wasm-wrappers/fdw/clerk_fdw",
    "wasm-wrappers/fdw/helloworld_fdw",
    "wasm-wrappers/fdw/hubspot_fdw",
    "wasm-wrappers/fdw/notion_fdw",
    "wasm-wrappers/fdw/orb_fdw",
    "wasm-wrappers/fdw/paddle_fdw",
    "wasm-wrappers/fdw/shopify_fdw",
    "wasm-wrappers/fdw/slack_fdw",
    "wasm-wrappers/fdw/snowflake_fdw",
]
resolver = "2"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

