[workspace]
members = [
    "supabase-wrappers",
    "supabase-wrappers-macros",
    "wrappers",
]
exclude = [
    "wasm-wrappers",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/supabase/wrappers"
repository = "https://github.com/supabase/wrappers"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

