[package]
name = "supabase-wrappers"
version = "0.1.20"
edition = "2021"
authors = ["Supabase Inc. https://supabase.com/"]
license = "Apache-2.0"
description = "Postgres Foreign Data Wrapper development framework in Rust."
homepage = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers"
repository = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers"
categories = ["database"]
keywords = ["database", "postgres", "postgresql", "extension"]

[features]
default = ["cshim"] # ["cshim", "pg15"] no PG version by default; needs to come from importing parent
cshim = ["pgrx/cshim"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = { git = "https://github.com/EnterpriseDB/pgrx", branch = "develop-v0.12.8-edb" }
thiserror = "1.0.48"
tokio = { version = "1.35", features = ["rt", "net"] }
uuid = { version = "1.2.2" }
supabase-wrappers-macros = { version = "0.1", path = "../supabase-wrappers-macros" }

[dev-dependencies]
pgrx-tests = { git = "https://github.com/EnterpriseDB/pgrx", branch = "develop-v0.12.8-edb" }


