[package]
name = "supabase-wrappers"
version = "0.1.20"
edition = "2021"
authors = ["Supabase Inc. https://supabase.com/"]
license = "Apache-2.0"
description = "Postgres Foreign Data Wrapper development framework in Rust."
homepage = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers"
repository = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers"
categories = ["database"]
keywords = ["database", "postgres", "postgresql", "extension"]

[features]
default = ["pg15"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(pgrx_embed)'] }

[dependencies]
pgrx = { version = "=0.12.9", default-features = false }
thiserror = "1.0.63"
tokio = { version = "1.40", features = ["rt", "net"] }
uuid = { version = "1.10.0" }
supabase-wrappers-macros = { version = "0.1", path = "../supabase-wrappers-macros" }

[dev-dependencies]
pgrx-tests = "=0.12.9"

[package.metadata.docs.rs]
features = ["pg15"]
no-default-features = true
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]
