[workspace]
members = [
    "cal_fdw",
    "calendly_fdw",
    "cfd1_fdw",
    "clerk_fdw",
    "helloworld_fdw",
    "hubspot_fdw",
    "infura_fdw",
    "notion_fdw",
    "openapi_fdw",
    "orb_fdw",
    "paddle_fdw",
    "shopify_fdw",
    "slack_fdw",
    "snowflake_fdw",
]
resolver = "2"

[profile.release]
strip = "debuginfo"
lto = true

[workspace.package]
edition = "2024"
rust-version = "1.88"
homepage = "https://github.com/supabase/wrappers/tree/main/wasm-wrappers"
repository = "https://github.com/supabase/wrappers/tree/main/wasm-wrappers"
