[package]
name = "hubspot_fdw"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.41.0"
serde_json = "1.0"

[package.metadata.component]
package = "supabase:hubspot-fdw"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "../../wit/v2" }
