[package]
name = "slack_fdw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
wit-bindgen = "0.16"
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.21"
thiserror = "1.0"
chrono = "0.4"
log = "0.4"

[profile.release]
lto = true
opt-level = 's'