[package]
name = "snowflake_fdw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.25.0"
serde_json = "1.0"

[package.metadata.component]
package = "supabase:snowflake-fdw"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "../../wit" }
